BoardServiceImpl - refact
1. loadTop5LatestPostsByBoard()
: key 타입을 Board 타입으로 변경
: 내부 로직 Board 타입으로 들어가게 변경