@@ -7,10 +7,7 @@ import kr.plusb3b.games.gamehub.domain.board.repository.PostsRepository;
 import kr.plusb3b.games.gamehub.domain.board.service.BoardService;
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,31 +23,27 @@ public class BoardServiceImpl implements BoardService {
     }
 
     @Override
-    public Map<String, List<Posts>> loadTop5LatestPostsByBoard() {
+    public Map<Board, List<Posts>> loadTop5LatestPostsByBoard() {
 
-        Map<String, List<Posts>> result = new HashMap<>();
+        Map<Board, List<Posts>> result = new LinkedHashMap<>(); // 순서 유지하고 싶으면 LinkedHashMap 추천
 
-        //활성화된 게시판 가져오기
         List<Board> boardList = boardRepo.findAll().stream()
                 .filter(Board::activateBoard)
                 .toList();
 
-        List<Posts> postsList;
-
-        for(Board board : boardList) {
-
-            //게시판의 아이디를 통해 게시물 가져오기
-            postsList = postsRepo.findByBoard_BoardId(board.getBoardId()).stream()
+        for (Board board : boardList) {
+            List<Posts> postsList = postsRepo.findByBoard_BoardId(board.getBoardId()).stream()
                     .filter(Posts::isActivatePosts)
                     .sorted(Comparator.comparing(Posts::getCreatedAt).reversed())
                     .limit(5)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            result.put(board.getBoardId(), postsList);
+            result.put(board, postsList);
         }
 
         return result;
     }
+
 
     @Override
     public void renameBoard(String oldName, String newName) {
